--- a/app/views/layouts/_meta.html.haml
+++ b/app/views/layouts/_meta.html.haml
@@ -1,5 +1,5 @@
 %meta{charset: "utf-8"}
-%meta{name: "viewport", content: "width: device-width, initial-scale: 1.0" }
+%meta{name: "viewport", content: "width=device-width, initial-scale=1.0" }
 %meta{name: "robots", content: "index, follow" }
 %meta{property: "fb:admins", content: "622070503" }
 %meta{property: "og:type", content: "website" }
