--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -45,10 +45,10 @@
       %a{ name: "location" }
       %h4{ "data-magellan-destination" => "location"} Location
   .row
-    .large-9.columns
+    .medium-9.columns
       %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
       =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-    .large-3.columns
+    .medium-3.columns
       = image_tag @invitation.sessions.host.avatar, class: 'sponsor-logo'
       %p
         = @host_address.to_html
@@ -62,20 +62,18 @@
       %a{ name: "attendees" }
       %h4{ "data-magellan-destination" => "attendees"}  Who else will be there?
   .row
-    .large-9.columns
-      .row
-        .large-6.columns
-          %h4 Students
-          %ol.attendances
-            - @invitation.sessions.attending_students.each do |invitation|
-              %li.attendance
-                .two-thirds
-                  =invitation.member.full_name
-        .large-6.columns
-          %h4 Coaches
-          %ol.attendances
-            - @invitation.sessions.attending_coaches.each do |invitation|
-              %li.attendance
-                .two-thirds
-                  =invitation.member.full_name
+    .medium-6.columns
+      %h4 Students
+      %ol.attendances
+        - @invitation.sessions.attending_students.each do |invitation|
+          %li.attendance
+            .two-thirds
+              =invitation.member.full_name
+    .medium-6.columns
+      %h4 Coaches
+      %ol.attendances
+        - @invitation.sessions.attending_coaches.each do |invitation|
+          %li.attendance
+            .two-thirds
+              =invitation.member.full_name
 
