--- a/app/views/dashboard/code.html.haml
+++ b/app/views/dashboard/code.html.haml
@@ -1,34 +1,30 @@
-%section#code
-  .titlebox#code-of-conduct
-    %h2 Code of conduct
-    .dot
-
-  .description
-    .details-block
+= render partial: 'shared/title', locals: { title: "Code of conduct", date: nil }
+%section#banner
+  .row
+    .large-12.columns
       %h3 The Quick Version
-    %p.lead
-      Our events are dedicated to providing a harassment-free experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of our members in any form. Sexual language and imagery is not appropriate for any of our events, including talks, workshops, parties, Twitter and any other online media. Members violating these rules may be sanctioned or expelled from the event and any future events at the discretion of the organisers.
+      %p
+        Our events are dedicated to providing a harassment-free experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of our members in any form. Sexual language and imagery is not appropriate for any of our events, including talks, workshops, parties, Twitter and any other online media. Members violating these rules may be sanctioned or expelled from the event and any future events at the discretion of the organisers.
 
-    .details-block
       %h3 The Long Version
-    %p.lead
-      Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
+      %p
+        Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
 
-    %p.lead
-      Participants asked to stop any harassing behavior are expected to comply immediately.
+      %p
+        Participants asked to stop any harassing behavior are expected to comply immediately.
 
-    %p.lead
-      Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualized images, activities, or other material. Staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.
+      %p
+        Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualized images, activities, or other material. Staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.
 
-    %p.lead
-      If a participant engages in harassing behavior, the organizers may take any action they deem appropriate, including warning the offender or expulsion.
+      %p
+        If a participant engages in harassing behavior, the organizers may take any action they deem appropriate, including warning the offender or expulsion.
 
-    %p.lead
-      If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact one of the organisers immediately.
+      %p
+        If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact one of the organisers immediately.
 
-    %p.lead
-      We expect participants to follow these rules at all <b>codebar</b> events.
+      %p
+        We expect participants to follow these rules at all <b>codebar</b> events.
 
-    %p.lead
-      If you have any questions or concerns about this code please
-      =mail_to "hello@codebar.io", "contact us", subject: "Regarding code of conduct"
+      %p
+        If you have any questions or concerns about this code please
+        =mail_to "hello@codebar.io", "contact us", subject: "Regarding code of conduct"
