--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -12,6 +12,6 @@
       %ul.no-bullet
         %li= link_to "Code of conduct", code_of_conduct_path
         %li= link_to "Coach guide", teaching_guide_path
-        %li= link_to "Tutorials", teaching_guide_path
+        %li= link_to "Tutorials", "http://tutorials.codebar.io"
     .large-4.columns
       = render partial: 'shared/social_media'
