--- a/app/views/dashboard/sponsoring.html.haml
+++ b/app/views/dashboard/sponsoring.html.haml
@@ -31,7 +31,7 @@
 
       %p
         We also accept anonymous donations via Gittip.
-        .git-tip
+        %span.git-tip
           %script{ :"data-gittip-username" => "by_codebar", :src => "//gttp.co/v1.js" }
 
       %p
