--- a/app/views/invitation/_student.html.haml
+++ b/app/views/invitation/_student.html.haml
@@ -1,3 +1,7 @@
 %p In our workshops, you will get to go through any of our available tutorials, ask for programming advice or get help on your own projects.
 
 %p In case you are unable to attend after you RSVP, please make sure you come back and update your attendance. We have limited space and do a coaches request depending on the number of attending students.
+
+%p Please make sure you <b>bring your laptop</b> with you are you will be working on it.
+
+%p PS: There will also be food at the workshop. We always make an effort to have vegetarian, vegan and gluten free options avaialble. If you have any other dietary requirements, send us email at #{mail_to "meetings@codebar.io", "meetings@codebar.io"}.
