--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,9 +8,13 @@
 
   %section.top-bar-section
     %ul.right
+      - if admin?
+        %li.has-form
+          = link_to "Admin", admin_root_path, class: 'button alert'
       - if logged_in?
         %li.has-form
           = link_to "My account", portal_index_path, class: 'button'
+
       - if current_page?(events_path)
         %li.active= link_to "Events", events_path
       - else
