--- a/app/views/admin/feedback/index.html.haml
+++ b/app/views/admin/feedback/index.html.haml
@@ -9,10 +9,11 @@
           .large-3.columns
             %h5.subheader
               =feedback.tutorial.title
-          .large-2.columns
-            - if feedback.coach.present?
-              =feedback.coach
-              =image_tag feedback.coach.avatar(96), class: 'th radius', title: feedback.coach.full_name
+          - if feedback.coach.present?
+            .large-1.columns
+              =image_tag feedback.coach.avatar(50), class: 'th radius', title: feedback.coach.full_name
+            .large-2.columns
+              =feedback.coach.full_name
           .large-2.columns
             - (0...feedback.rating).each do |rating|
               .fa.fa-star
