--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,8 +1,9 @@
+= render partial: 'shared/title', locals: { title: "Become a member", date: nil }
 %section#banner
   .row
     .medium-12.columns
       %p Before signing up, have a look at our #{link_to "code of conduct", code_of_conduct_path}.
-      %p To receive invitations for our events, make sure you subscribe as a Student /or a Coach and fill in your required profile details when you come back to our website.
+      %p To receive invitations for our events, make sure you subscribe as a Student or a Coach and fill in your required profile details when you come back to our website.
       %p Invitations are send out periodically, so don't worry if you don't receive one as soon as you sign up.
       = link_to "Sign up", "/auth/github", class: "button round tiny"
 
