update asset path

--- a/app/assets/stylesheets/star-rating.css.sass
+++ b/app/assets/stylesheets/star-rating.css.sass
@@ -10,7 +10,7 @@
     li
       float: left
       margin-left: 2px
-      background: url("star-rating.gif") no-repeat
+      background: image-url("star-rating.gif") no-repeat
       width: 25px
       height: 25px
       cursor: pointer
@@ -26,7 +26,7 @@
 
   span.less
     cursor: pointer
-    background: url("star-rating.gif") -75px no-repeat
+    background: image-url("star-rating.gif") -75px no-repeat
     display: block
     float: left
     height: 25px
