update Facebook page name

--- a/app/views/shared/_social_media.html.haml
+++ b/app/views/shared/_social_media.html.haml
@@ -10,7 +10,7 @@
         %i.fa.fa-square.fa-stack-2x
         %i.fa.fa-twitter.fa-stack-1x.fa-inverse
   %li.facebook
-    =link_to "https://facebook.com/bycodebar" do
+    =link_to "https://facebook.com/codebarHQ" do
       %span.fa-stack.fa-lg
         %i.fa.fa-square.fa-stack-2x
         %i.fa.fa-facebook.fa-stack-1x.fa-inverse
