--- a/app/views/invitations/_coach.html.haml
+++ b/app/views/invitations/_coach.html.haml
@@ -10,13 +10,15 @@
         .panel
           %p
             %h4
-              = link_to invitation.parent.to_s, invitation_path(invitation)
+              = invitation.parent.to_s
             .date= "on #{l(invitation.parent.date_and_time, format: :website_format)}"
             %br
 
             =link_to attendance_status(invitation), invitation_path(invitation), class: "button round expand"
+- elsif @upcoming_session
+  %em You have no invitations. If you just signed up you should receive one soon.
 - else
-  %em There are no upcoming events
+  %em There are no upcoming events.
 
 - if @coached.any?
   %p
