--- a/app/views/shared_mailers/_body_header.html.haml
+++ b/app/views/shared_mailers/_body_header.html.haml
@@ -7,7 +7,7 @@
         %table{ bgcolor: "#fdfdfd" }
           %tr
             %td
-              %img{ src: "https://dl.dropboxusercontent.com/u/108831317/codebar.png" }
+              %img{ src: "https://dl.dropboxusercontent.com/u/108831317/codebar.png", alt: "logo" }
             %td{ align: "right"}
               %h6.collapse= title
     %td
