update attending confirmation email

--- a/app/views/invitation/_student.html.haml
+++ b/app/views/invitation/_student.html.haml
@@ -2,6 +2,6 @@
 
 %p In case you are unable to attend after you RSVP, please make sure you come back and update your attendance. We have limited space and do a coaches request depending on the number of attending students.
 
-%p Please make sure you <b>bring your laptop</b> with you are you will be working on it.
+%p Please make sure you <b>bring your laptop</b> with you.
 
 %p PS: There will also be food at the workshop. We always make an effort to have vegetarian, vegan and gluten free options avaialble. If you have any other dietary requirements, send us email at #{mail_to "meetings@codebar.io", "meetings@codebar.io"}.
