--- a/app/views/session_invitation_mailer/invite_student.html.haml
+++ b/app/views/session_invitation_mailer/invite_student.html.haml
@@ -29,7 +29,7 @@
                 =image_tag(@session.host.avatar)
               %td
                 %h4
-                  Coding workshop
+                  Workshop
                   %small #{l(@session.date_and_time, format: :email)}
                 %p
                   %b Venue
