--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,9 +1,9 @@
-= render partial: 'shared/title', locals: { title: "Become a member", date: nil }
+= render partial: 'shared/title', locals: { title: @page_title, date: nil }
 %section#banner
   .row
     .medium-12.columns
-      %p Before signing up, have a look at our #{link_to "code of conduct", code_of_conduct_path}.
-      %p To receive invitations for our events, make sure you subscribe as a Student or a Coach and fill in your required profile details when you come back to our website.
-      %p Invitations are send out periodically, so don't worry if you don't receive one as soon as you sign up.
-      = link_to "Sign up", "/auth/github", class: "button round tiny"
-
+      %p Before you continue, have a look at our #{link_to "code of conduct", code_of_conduct_path}. We offer a welcoming, inclusive and learning-friendly environment, and have a zero tolerance policy towards any form of harassment or inappropriate behavior.
+      %p Invitations are send out periodically, so don't worry if you don't receive one as soon as you register.
+      = link_to registration_path(role: @role), class: "button round" do
+        Sign in with Github
+        %i.fa.fa-github.fa-fw
