update member edit form and displayed message

--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -16,7 +16,7 @@
 
   .row
     .large-12.columns
-      = f.input :about_you, as: :text, label: "Tell us a little bit about yourself", required: true, hint: "for coaches, this is also displayed #{link_to("here", coaches_path)}".html_safe
+      = f.input :about_you, as: :text, label: "Tell us a little bit about yourself", required: true
 
   .row
     .large-12.columns
