--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,6 +1,5 @@
-= render partial: 'shared/title', locals: { title: "Become a member", date: nil }
+= render partial: 'shared/title', locals: { title: "Account details", date: nil }
 %section#banner
   .row
     .large-12.columns
-      Thanks for signing up. Please fill in your details.
-      = render partial: 'members/form', locals: { submit_text: "Join #{t("brand")}" }
+      = render partial: 'members/form', locals: { submit_text: "Save" }
