new background image!

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,7 +3,7 @@
 @import 'partials/social_media';
 
 section.title {
-  background-image: image-url('codebar-3.png');
+  background-image: image-url('bg.JPG');
   background-position: 0 -10px;
   background-size: 100% auto;
   background-repeat: no-repeat;
