--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,4 +1,4 @@
-= render partial: 'shared/title', locals: { title: "Profile", date: nil }
+= render partial: 'shared/title', locals: { title: "My Profile", date: nil }
 %section#banner
   .row
     .large-12.columns
