--- a/app/views/portal/index.html.haml
+++ b/app/views/portal/index.html.haml
@@ -1,4 +1,4 @@
-= render partial: 'shared/title', locals: { title: "Member portal", date: nil }
+= render partial: 'shared/title', locals: { title: "My account", date: nil }
 
 #banner
 .row
